--- a/functions/package.json
+++ b/functions/package.json
@@ -16,13 +16,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "faker": "^6.6.6",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
-    "kill-port": "^2.0.1"
+    "kill-port": "^2.0.1",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "chai": "^4.3.7",
@@ -30,8 +29,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
-    "mocha": "^10.2.0",
-    "sinon": "^15.0.4",
     "typescript": "^4.5.4"
   },
   "private": true
